[gd_scene load_steps=2 format=3 uid="uid://dtjo8toi6q6b7"]

[ext_resource type="Script" uid="uid://dwi6wgey7fehl" path="res://save.gd" id="1_tknle"]

[node name="save" type="Panel"]
custom_minimum_size = Vector2(100, 100)
offset_right = 498.0
offset_bottom = 100.0
script = ExtResource("1_tknle")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 9.0
offset_top = 11.0
offset_right = 84.0
offset_bottom = 86.0
text = "加载"

[node name="Button2" type="Button" parent="."]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 413.0
offset_top = 11.0
offset_right = 488.0
offset_bottom = 86.0
text = "删除"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 10.0
offset_right = 409.0
offset_bottom = 89.0

[node name="saveName" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "玩家名字"

[node name="saveInfos" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "其他信息"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_delete_button_button_down"]
